# grpc-labview

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Failed.txt  _CMakeLists.txt  notes.txt  test-call.vi  vcpkg.json
.github/workflows/: build_grpc_labview.yml  build_on_linux.yml  build_on_rt.yml
_.github/workflows/: windows_x64_build.yml  windows_x86_build.yml
build-it/: build.py  stage_artifacts.py
docs/: Building.md
examples/helloworld/: helloworld.lvproj
examples/helloworld/helloworld_client/: helloworld_client.lvlib
examples/helloworld/helloworld_client/Client API/: Create Client.vi  Destroy Client.vi
examples/helloworld/helloworld_client/RPC Messages/: Register gRPC Messages.vi  helloworld_HelloReply.ctl  helloworld_HelloRequest.ctl
examples/helloworld/helloworld_server/: Run greeter_server.vi  helloworld_server.lvlib
examples/helloworld/helloworld_server/RPC Messages/: Get helloworld_HelloRequest.vi  Register gRPC Messages.vi  Set helloworld_HelloReply.vi  helloworld_HelloReply.ctl  helloworld_HelloRequest.ctl
labview source/Client Server Support New/: ClientServer Support New.lvproj
labview source/Client Server Support New/Client Template/: Client Template.lvlib
labview source/Client Server Support New/Client Template/Client API/: Create Client.vi  Destroy Client.vi
labview source/Client Server Support New/Client Template/RPC Messages/: Get Value for package_template_enum.vi  Get package_template_enum for Value.vi  Register gRPC Messages.vi
labview source/Client Server Support New/Client Template/RPC Service/: Begin BidirectionalStreamTemplate.vi  Begin ClientStreamTemplate.vi  Begin ServerStreamTemplate.vi  (+6 more)
labview source/Client Server Support New/Oneof Template/: FlatToRich.vim  GetFieldFromProtobufIndex.vi  OneOfTemplate.lvclass  RichToFlat.vim
labview source/Client Server Support New/Server Template/: Run Service.vi
labview source/Client Server Support New/gRPC Scripting Tools/: Open gRPC Server-Client [2] - Code Generator.vi
labview source/gRPC lv Servicer/: gRPC lv Servicer.lvproj
labview source/gRPC lv Servicer/ServiceBase/: ServiceBase.lvclass
labview source/gRPC lv Servicer/Servicer/: Create Server.vi  Get Server Address.vi  Get Server State Ref.vi  Get Server State UE.vi  Get gRPC ID.vi  Initialize Server State.vi  Run Servicer.vi  Server Internal Message.ctl  Server State Data.ctl  Server State.ctl  Server gRPC UEs.ctl  Servicer.lvclass  Set gRPC ID.vi  Start Server.vi  Stop Server.vi
labview source/gRPC lv Support/: Check Conditional Disables.vi  Check Handle Types.vi  Fix CLFN Paths.vi  Test.vi  gRPC lv Support.lvproj  grpc-labview.lvproj  grpc-lvsupport.lvlib
labview source/gRPC lv Support/Client API/: Client Begin Bidirectional Streaming Call.vi  Client Begin Client Streaming Call.vi  Client Begin Server Streaming Call.vim  Client Cancel Call Context.vi  Client Cancel Call.vi  Client Complete Client Streaming Call.vim  Client Complete Streaming Call.vi  Client Read From Stream.vim  Client Unary Call.vim  Client Write To Stream.vim  Client Writes Complete.vi  Close Client Context.vi  Close Client.vi  Create Client Context.vi  Create Client.vi  Get Enum Value from Proto Value.vi  Get Proto Value from Enum Value.vi
labview source/gRPC lv Support/Server API/: CompleteMetadataRegistration.vi  CreateSerializationSession.vi  FreeSerializationSession.vi  FreeUnpackedFields.vi  GetUnpackedField.vim  PackToBuffer.vim  Set Call Status.vi  Translate Protobuf Error.vi  UnpackFieldsFromAny.vi  UnpackFieldsFromBuffer.vi  UnpackFromBuffer.vim
labview source/gRPC lv Support/Shared/: Any.ctl  Check InitCallback Acknowledgement.vi  Create InitCallback Acknowledgment.vi  Create Occurance.vi  Initialize InitCallback Acknowledgment User Event.vi  Is Feature Toggle Set.vi  Set LVRT Module Path.vi  TranslateGrpcError.vi  Wait On Occurence.vi  Wait On Occurrence Wrapper.vi  Wait On Occurrence.vi  Wait On Occurrence_.vi  grpcId.ctl
labview source/gRPC lv Support/grpc-lvsupport/: Any.ctl  AnyBuilderAddValue.vim  AnyBuilderBegin.vi  AnyBuilderBeginNestedMessage.vi  AnyBuilderBeginRepeatedNestedMessage.vi  AnyBuilderBeginRepeatedNestedMessageElement.vi  AnyBuilderBuild.vi  AnyBuilderBuildToBuffer.vi  Apply Package Name to Enum Metadata.vi  Apply Package Name.vi  Client Begin Bidirectional Streaming Call.vi  Client Begin Client Streaming Call.vi  Client Begin Server Streaming Call.vim  Client Cancel Call Context.vi  Client Cancel Call.vi  Client Complete Client Streaming Call.vim  Client Complete Streaming Call.vi  Client Get Enum Value from Proto Value.vi  Client Get Proto Value from Enum Value.vi  Client Read From Stream.vim  Client Unary Call.vim  Client Write To Stream.vim  Client Writes Complete.vi  Close Client Context.vi  Close Client.vi  Cluster to Element Details.vi  Cluster to gRPC LabVIEW Message.vi  Complete Call.vi  CompleteMetadataRegistration.vi  Create And Register Generic Method Server Event.vi  Create And Register Server Event.vim  Create Client Context.vi  Create Client.vi  Create InitCallback Acknowledgment.vi  Create Occurance.vi  Create Server.vi  CreateSerializationSession.vi  Element to Enum Metadata.vi  Enum Metadata.ctl  FreeSerializationSession.vi  (+38 more)
patches/: whereami.patch
src/: any_support.cc  cluster_copier.cc  cluster_copier.h  enum_metadata.h  event_data.cc  event_data.h  example_client.cc  exceptions.h  feature_toggles.cc  feature_toggles.h  grpc_client.cc  grpc_client.h  grpc_entry_point.cc  grpc_interop.cc  grpc_load.cc  grpc_server.cc  grpc_server.h  grpc_shared_lib_load.cc  lv_interop.cc  lv_interop.h  lv_message.cc  lv_message.h  lv_message_efficient.cc  lv_message_efficient.h  lv_message_value.cc  lv_proto_server_reflection_plugin.cc  lv_proto_server_reflection_plugin.h  lv_proto_server_reflection_service.cc  lv_proto_server_reflection_service.h  message_element_metadata_owner.cc  message_metadata.h  message_value.h  metadata_owner.h  pointer_manager.h  proto_parser.cc  serialization_session.h  unpacked_fields.cc
tests/CMakeTests/testcases/: ExportedFunctionList.json
(+102 files in other folders)
